# AirControl-MK

./: .gitattributes  .gitignore  BUILD.md  CITATION.cff  CONTRIBUTING.md  MANIFEST.in  NOTICE  README.md  ROADMAP.md  SECURITY.md  aircontrol.spec  go.mod  pyproject.toml  requirements-build.txt  requirements-optional.txt  requirements.txt  run_app.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: accessibility_feedback.yml  bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yml  ci.yml
aircontrol/: __init__.py  __main__.py  app.py  config.py  crash.py  diagnostics.py  launcher.py
aircontrol/control/: __init__.py  actions.py  cursor.py  input_backend.py  scanning.py
aircontrol/evaluation/: __init__.py  analysis.py  filter_benchmark.py  fitts.py  fitts_runner.py  metrics.py  swipe_loso.py  usability.py
aircontrol/fusion/: __init__.py  coordinator.py
aircontrol/gestures/: __init__.py  bimanual.py  collector.py  dynamic.py  engine.py  features.py  heuristic.py  ml.py  synthetic.py
aircontrol/platform/: __init__.py  base.py  linux.py  macos.py  windows.py
aircontrol/tracking/: __init__.py  camera.py  filters.py  gaze.py  gaze_math.py  hand_tracker.py
aircontrol/ui/: __init__.py  calibration.py  renderer.py  scanning_keyboard.py
aircontrol/voice/: __init__.py  commands.py  recognizer.py
cmd/aircontrol-helper/: main.go  main_test.go
docs/: ARCHITECTURE.md  NATIVE_HELPER.md  RESEARCH.md  THESIS.md
packaging/: USER_GUIDE_RU.txt
packaging/linux/: AirControl.desktop  AppRun  build_appimage.sh  build_deb.sh
packaging/pyinstaller_hooks/: hook-speech_recognition.py
packaging/pyinstaller_runtime_hooks/: matplotlib_stub.py
packaging/windows/: AirControl.iss
tests/: test_config_migration.py  test_core.py  test_fusion.py  test_gaze_calibration.py  test_input_backend_extra.py  test_ml.py  test_onboarding.py  test_robustness.py  test_runtime_health.py  test_telemetry.py  test_voice_setup.py
tools/: check_tracked_sources.py  collect_swipes.py  setup_vosk.py  smoke_build.py  train_swipe_model.py  verify_release_artifacts.py
